[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resilience-gate"
version = "1.0.0"
description = "GitHub Action for running the Resilience quality gate."
authors = ["Swaroop Shubhakrishna Bhat <swaroopbhatk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = [
  "*/tests/*.py",
  "*/tests.py",
  "*/*_tests.py",
]
norecursedirs = "__pycache__ static .ropeproject"
addopts = "--cov=src --cov-report=html:./test_reports/html --cov-report=term"
